# event-driven-architecture

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
appointment/: run.py
appointment/app/: __init__.py
appointment/app/conf/: __init__.py
appointment/app/resources/: model.py  producer.py  router.py
appointment/tests/: conftest.py  test_main.py
financial/: .env.example  consumer.py  run.py
financial/app/conf/: __init__.py
financial/app/resources/: model.py  router.py
financial/tests/: conftest.py  test_main.py
gateway/nginx/: default.conf
