[tool.poetry]
name = "sre_archtest"
version = "0.1.0"
description = ""
authors = ["Philippe Gonzaga <francisco.philippe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
